# drra-components

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  simple_example.json
lib/: CMakeLists.txt  README.md
lib/alimp/: Bender.yml
lib/alimp/rtl/: alimp.sv  alimp_pkg.sv
lib/cells/: CMakeLists.txt
lib/cells/cell_btm/: Bender.yml  arch.json  isa.json  rtl.sv
lib/cells/cell_btm/rtl/: cell_btm.sv.j2  cell_btm.sv.jinja
lib/cells/cell_mid/: Bender.yml  arch.json  rtl.sv
lib/cells/cell_mid/rtl/: cell_mid.sv.j2
lib/cells/cell_single_row/: Bender.yml  arch.json  rtl.sv
lib/cells/cell_single_row/rtl/: cell_single_row.sv.j2
lib/cells/cell_top/: Bender.yml  arch.json  rtl.sv
lib/cells/cell_top/rtl/: cell_top.sv.j2
lib/common/: CMakeLists.txt
lib/common/agu/: Bender.yml  Bender_REMOTE_1844911.yml  CMakeLists.txt
lib/common/agu/rtl/: agu.sv
lib/common/agu_RTR/: Bender.yml  agu_RTR.sv  agu_RTR_pkg.sv  agu_RTR_tasks.sv  agu_RTR_tb.sv  compile.do  config.sv  controller copy 2.sv  controller copy 3.sv  controller copy 4.sv  controller copy 5.sv  controller copy.sv  controller.sv  counter.sv  register.sv  sim.do  tasks.sv  transcript  vsim.wlf
lib/common/agu_RTR/rtl/: .gitignore  Bender.yml  agu_RTR.sv  agu_RTR_RTL_tb.sv  agu_RTR_pkg.sv  agu_RTR_tb.sv  compile.do  config.sv  controller.sv  counter.sv  decoder.sv  ir.sv  ir_compile.do  ir_gen_compile.do  ir_gen_sim.do  ir_gen_testrun.sh  ir_generator.sv  ir_generator_tb.sv  ir_tb.sv  ir_testrun.sh  ir_top.sv  ir_top_compile.do  ir_top_sim.do  ir_top_tb.sv  ir_top_testrun.sh  mt_ir.sv  mt_ir_compile.do  mt_ir_tb.sv  mt_ir_testrun.sh  mt_ir_top.sv  mt_ir_top_compile.do  mt_ir_top_tb.sv  mt_ir_top_testrun.sh  or_mt_ir.sv  or_mt_ir_compile.do  or_mt_ir_tb.sv  or_mt_ir_testrun.sh  or_mt_ir_top.sv  or_mt_ir_top_compile.do  or_mt_ir_top_tb.sv  (+4 more)
lib/common/agu_controller/: Bender.yml
lib/common/agu_fft/: Bender.yml  CMakeLists.txt
lib/common/agu_fft/rtl/: agu_fft.sv  mux_rotator.sv  twiddle_addr.sv
lib/common/agu_fft_r4/: Bender.yml  CMakeLists.txt
lib/common/agu_fft_r4/rtl/: agu_fft_r4.sv  mux_rotator_r4.sv  twiddle_addr_r4.sv
lib/common/agu_fft_v3/: Bender.yml
lib/common/agu_fft_v3/rtl/: agu_fft_v3.sv  mux_rotator_v3.sv  twiddle_addr_v3.sv
lib/common/clock_buffer/: Bender.yml
lib/common/clock_buffer/rtl/: clock_buffer.gf22.sv  clock_buffer.sim.sv
lib/common/fsm/: Bender.yml
lib/common/fsm/rtl/: fsm.sv
lib/common/io_buffer/: CMakeLists.txt
lib/common/io_buffer/sst/: CMakeLists.txt  io_buffer.cpp  io_buffer.h
lib/common/isa/: isa.sv
lib/common/jinja/: agu_config.j2  package.j2
lib/common/signal_selector/: Bender.yml
lib/common/signal_selector/rtl/: signal_selector.sv
lib/common/sram/: Bender.yml  CMakeLists.txt
lib/common/sram/rtl/: sram.gf22.sv  sram.sim.sv  sram:gf22.sv  sram:tsmc28.sv
lib/common/sram/tb/: sram_tb.sv
lib/common/sst/: CMakeLists.txt  custom_backing.h  drra.h
lib/common/sst/generate_pkg/: Cargo.toml
lib/common/sst/include/: activationEvent.h  custom_backing.h  drra.h  drra_agu.h  drra_component.h  drra_controller.h  drra_output.h  drra_resource.h  instruction.h  timingModel.h  traceEvent.h
lib/common/sst/src/: drra_agu.cpp  drra_resource.cpp  instruction.cpp  timingModel.cpp
lib/common/sst/template/: component_pkg.cpp.jinja  component_pkg.h.jinja
lib/common/sst/timing_model/: CMakeLists.txt
lib/controllers/: CMakeLists.txt
lib/controllers/sequencer/: Bender.yml  CMakeLists.txt  arch.json  isa.json
lib/controllers/sequencer/rtl/: alu.sv.j2  sequencer.sv.j2  sequencer.sv.jinja
lib/controllers/sequencer/sst/: sequencer.cpp  sequencer.h  sequencer_pkg.cpp  sequencer_pkg.h
lib/controllers/sequencer/timing_model/: Cargo.toml
lib/fabric/: Bender.yml  CMakeLists.txt
lib/fabric/io_buffer/: CMakeLists.txt
lib/fabric/io_buffer/sst/: custom_backing.h  io_buffer.cpp
lib/fabric/rtl/: drra.sv.j2  fabric.sv.j2  fabric_tb:sim.sv.j2
lib/pcu/: Bender.yml
lib/pcu/rtl/: boot.sv  core.sv  extif.sv  pcu.sv  pcu_pkg.sv  picorv32.v  ram.sv  sram.sv  ssm.sv
lib/resources/: CMakeLists.txt
lib/resources/acc/: Bender.yml  arch.json  isa.json
lib/resources/acc/rtl/: acc.sv.j2  acc_pkg.sv.j2  controller.sv.j2  decoder.sv.j2  mode_selector.sv.j2  tree_adder.sv
lib/resources/acc/sst/: acc.cpp  acc.h  acc_operations.cpp  acc_operations.h
lib/resources/bcpnn/: Bender.yml  arch.json  isa.json
lib/resources/bu/: Bender.yml  CMakeLists.txt  arch.json  isa.json
lib/resources/complex_dpu/: Bender.yml  CMakeLists.txt  arch.json  isa.json
lib/resources/dpu/: Bender.yml  CMakeLists.txt  arch.json  isa.json
lib/resources/dpu_2cycle_mac/: Bender.yml  arch.json  rtl.sv
lib/resources/dpu_Q88/: Bender.yml  arch.json
lib/resources/dpu_q88/: CMakeLists.txt  arch.json
lib/resources/dummy/: Bender.yml  CMakeLists.txt
lib/resources/fpu/: Bender.yml  arch.json
lib/resources/fpu16/: CMakeLists.txt  arch.json  isa.json
lib/resources/io/: Bender.yml  arch.json  isa.json
lib/resources/iosram_both/: Bender.yml  arch.json  isa.json
lib/resources/iosram_btm/: Bender.yml  CMakeLists.txt  arch.json  isa.json  rtl.sv
lib/resources/iosram_top/: Bender.yml  arch.json  isa.json
lib/resources/radix2_bu/: Bender.yml  arch.json  isa.json
lib/resources/rf/: Bender.yml  arch.json  isa.json
lib/resources/rf_fft/: Bender.yml  arch.json  isa.json
lib/resources/rf_fft4/: Bender.yml  arch.json  isa.json
lib/resources/rf_fft_r4/: Bender.yml  CMakeLists.txt  arch.json  isa.json
lib/resources/rf_fft_v3/: Bender.yml  arch.json  isa.json
lib/resources/rf_io/: Bender.yml  arch.json  isa.json
lib/resources/swb/: Bender.yml  CMakeLists.txt  arch.json  isa.json  m.json  rtl2.sv  t.sv
lib/resources/tfg/: Bender.yml  arch.json  isa.json
lib/resources/vec_add/: Bender.yml
lib/resources/vpu/: Bender.yml  README.md  arch.json  isa.json
lib/tb/: Bender.yml
lib/tb/rtl/: tb.sv
lib/utils/: CMakeLists.txt  sram:sim.sv  sram:tsmc28.sv
lib/utils/rtl/: CMakeLists.txt
lib/utils/sst/: custom_backing.h  drra.h  timingModel.cpp  timingModel.h
(+314 files in other folders)
